--- a/package.json
+++ b/package.json
@@ -17,53 +17,56 @@
         "cypress:test": "start-server-and-test start http://localhost:3000 cypress:run"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@mui/material": "^5.10.0",
+        "@next/bundle-analyzer": "^10.0.5",
+        "@reduxjs/toolkit": "^1.6.0",
+        "axios": "^0.21.1",
         "next": "^12.1.6",
+        "next-compose-plugins": "^2.2.1",
+        "next-i18next": "^7.0.1",
+        "prettier": "^2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "next-compose-plugins": "^2.2.1",
-        "sass": "^1.32.5",
-        "axios": "^0.21.1",
-        "@next/bundle-analyzer": "^10.0.5",
         "react-query": "^3.5.16",
-        "react-use": "^15.3.8",
         "react-redux": "^7.2.4",
-        "@reduxjs/toolkit": "^1.6.0",
-        "next-i18next": "^7.0.1",
-        "prettier": "^2.2.1"
+        "react-use": "^15.3.8",
+        "sass": "^1.32.5"
     },
     "devDependencies": {
-        "@types/node": "^14.14.13",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "typescript": "^4.1.3",
-        "autoprefixer": "^10.1.0",
-        "tailwindcss": "^2.0.2",
-        "postcss": "^8.2.4",
-        "sass-loader": "^10.1.1",
         "@babel/core": "^7.12.10",
         "@storybook/addon-actions": "^6.1.14",
         "@storybook/addon-essentials": "^6.1.14",
+        "@storybook/addon-knobs": "^6.1.14",
         "@storybook/addon-links": "^6.1.14",
         "@storybook/preset-scss": "^1.0.3",
-        "@storybook/addon-knobs": "^6.1.14",
         "@storybook/react": "^6.1.14",
-        "babel-loader": "^8.2.2",
-        "style-loader": "^2.0.0",
-        "@types/react-redux": "^7.1.16",
-        "eslint": "^7.15.0",
-        "@typescript-eslint/eslint-plugin": "^4.9.1",
-        "@typescript-eslint/parser": "^4.9.1",
-        "eslint-config-prettier": "^7.0.0",
-        "eslint-plugin-prettier": "^3.2.0",
         "@testing-library/react": "^11.2.3",
         "@testing-library/react-hooks": "^5.0.0",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^26.6.3",
-        "ts-jest": "^26.4.4",
-        "nock": "^13.0.6",
-        "isomorphic-unfetch": "^3.1.0",
-        "dotenv": "^8.2.0",
+        "@types/node": "^14.14.13",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-redux": "^7.1.16",
+        "@typescript-eslint/eslint-plugin": "^4.9.1",
+        "@typescript-eslint/parser": "^4.9.1",
+        "autoprefixer": "^10.1.0",
+        "babel-loader": "^8.2.2",
         "cypress": "^6.2.1",
-        "start-server-and-test": "^1.11.0"
+        "dotenv": "^8.2.0",
+        "eslint": "^7.15.0",
+        "eslint-config-prettier": "^7.0.0",
+        "eslint-plugin-prettier": "^3.2.0",
+        "identity-obj-proxy": "^3.0.0",
+        "isomorphic-unfetch": "^3.1.0",
+        "jest": "^26.6.3",
+        "nock": "^13.0.6",
+        "postcss": "^8.2.4",
+        "sass-loader": "^10.1.1",
+        "start-server-and-test": "^1.11.0",
+        "style-loader": "^2.0.0",
+        "tailwindcss": "^2.0.2",
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.3"
     }
 }
