--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
         "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
         "test": "jest -c test/jest.config.js",
+        "coverage": "jest -c test/jest.config.js --coverage",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run --config video=false",
         "cypress:test": "start-server-and-test start http://localhost:3000 cypress:run"
@@ -22,6 +23,7 @@
         "@mui/material": "^5.10.0",
         "@next/bundle-analyzer": "^10.0.5",
         "@reduxjs/toolkit": "^1.6.0",
+        "@tanstack/react-query": "^4.1.3",
         "axios": "^0.21.1",
         "next": "^12.1.6",
         "next-compose-plugins": "^2.2.1",
@@ -29,7 +31,6 @@
         "prettier": "^2.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-query": "^3.5.16",
         "react-redux": "^7.2.4",
         "react-use": "^15.3.8",
         "sass": "^1.32.5"
